src/test/deca/codegen/valid/intermediaire2/arithmetiques/06readIntReadFloat.deca
// Description:
//    Programme minimaliste affichant le résultat d'une addition entre un readInt et un readFloat
//
// Resultats:
//    5.60000e+00
//    1.68000e+01
//
// Historique:
//    cree le 09/06/2022

{
    float a = readInt() + readFloat();
    println(a);
    println(readFloat() + readInt());
}